--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
         "src/**/*.tsx",
         "src/**/*.vue",
         "tests/**/*.ts",
-        "tests/**/*.tsx"
+        "tests/**/*.tsx",
+        "src/plugins/MultiFilters.ts"
     ],
     "exclude": ["node_modules"]
 }
