--- a/package.json
+++ b/package.json
@@ -1,43 +1,55 @@
 {
-  "name": "timemachine",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
-  },
-  "main": "background.js",
-  "dependencies": {
-    "@mdi/font": "^2.6.95",
-    "@syncfusion/ej2-vue-grids": "^16.4.55",
-    "@types/numeral": "0.0.25",
-    "axios": "^0.18.0",
-    "numeral": "^2.0.6",
-    "roboto-fontface": "*",
-    "vue": "^2.6.6",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.5.5",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-typescript": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
-    "electron": "^4.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "typescript": "^3.2.1",
-    "vue-cli-plugin-electron-builder": "^1.2.0",
-    "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
-  }
+    "name": "timemachine",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint",
+        "electron:build": "vue-cli-service electron:build",
+        "electron:serve": "vue-cli-service electron:serve",
+        "postinstall": "electron-builder install-app-deps",
+        "postuninstall": "electron-builder install-app-deps"
+    },
+    "main": "background.js",
+    "dependencies": {
+        "@mdi/font": "^2.6.95",
+        "@syncfusion/ej2-vue-buttons": "^17.1.38",
+        "@syncfusion/ej2-vue-calendars": "^17.1.38",
+        "@syncfusion/ej2-vue-dropdowns": "^17.1.38",
+        "@syncfusion/ej2-vue-grids": "^17.1.38",
+        "@syncfusion/ej2-vue-inplace-editor": "^17.1.38",
+        "@syncfusion/ej2-vue-inputs": "^17.1.38",
+        "@syncfusion/ej2-vue-lists": "^17.1.38",
+        "@syncfusion/ej2-vue-navigations": "^17.1.38",
+        "@syncfusion/ej2-vue-popups": "^17.1.38",
+        "@syncfusion/ej2-vue-richtexteditor": "^17.1.38",
+        "@syncfusion/ej2-vue-splitbuttons": "^17.1.38",
+        "@types/numeral": "0.0.25",
+        "axios": "^0.18.0",
+        "moment": "^2.24.0",
+        "numeral": "^2.0.6",
+        "roboto-fontface": "*",
+        "vue": "^2.6.6",
+        "vue-class-component": "^6.0.0",
+        "vue-property-decorator": "^7.0.0",
+        "vue-router": "^3.0.1",
+        "vuetify": "^1.5.5",
+        "vuex": "^3.0.1"
+    },
+    "devDependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/moment": "^2.13.0",
+        "@vue/cli-plugin-babel": "^3.5.0",
+        "@vue/cli-plugin-typescript": "^3.5.0",
+        "@vue/cli-service": "^3.5.0",
+        "electron": "^4.0.0",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.1",
+        "typescript": "^3.2.1",
+        "vue-cli-plugin-electron-builder": "^1.2.0",
+        "vue-cli-plugin-vuetify": "^0.5.0",
+        "vue-template-compiler": "^2.5.21",
+        "vuetify-loader": "^1.0.5"
+    }
 }
