--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
         "tests/**/*.tsx",
         "src/plugins/MultiFilters.ts"
     ],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "dist_electron"]
 }
