--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,7 @@
         "source.fixAll.tslint": true
     },
     "vetur.format.options.tabSize": 4,
-    "prettier.printWidth": 120,
+    "prettier.printWidth": 160,
     "prettier.htmlWhitespaceSensitivity": "strict",
     "eslint.autoFixOnSave": true,
     "prettier.eslintIntegration": true,
@@ -29,5 +29,6 @@
         "dist": true,
         "dist_electron": true
     },
-    "csharp.referencesCodeLens.enabled": false
+    "csharp.referencesCodeLens.enabled": false,
+    "prettier.tabWidth": 4
 }
