--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "vue-cli-plugin-electron-builder": "^1.2.0",
         "vue-cli-plugin-vuetify": "^0.5.0",
         "vue-template-compiler": "^2.5.21",
-        "vuetify-loader": "^1.0.5"
+        "vuetify-loader": "^1.0.5",
+        "vuex-module-decorators": "^0.9.8"
     }
 }
