--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.1",
         "typescript": "^3.2.1",
+        "typescript-base": "^1.0.6",
+        "typescript-linq": "^1.0.6",
         "vue-cli-plugin-electron-builder": "^1.2.0",
         "vue-cli-plugin-vuetify": "^0.5.0",
         "vue-template-compiler": "^2.5.21",
