유니버스 필터링 수정

--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
         "@syncfusion/ej2-vue-splitbuttons": "^17.1.38",
         "@types/numeral": "0.0.25",
         "axios": "^0.18.0",
+        "bootstrap": "^4.3.1",
+        "bootstrap-vue": "^2.0.0-rc.18",
         "moment": "^2.24.0",
         "numeral": "^2.0.6",
         "roboto-fontface": "*",
-        "vue": "^2.6.6",
+        "vue": "^2.6.10",
         "vue-class-component": "^6.0.0",
         "vue-property-decorator": "^7.0.0",
         "vue-router": "^3.0.1",
